Fix floating playlist alignment

--- a/ui/component/playlistCard/style.scss
+++ b/ui/component/playlistCard/style.scss
@@ -191,6 +191,7 @@
 .content__wrapper--floating {
   .playlist__wrapper {
     max-height: 370px;
+    margin-left: 0;
     .card__header--grid {
       .card__title {
         .playlist__title {
